Fixed misalignment caused in 5 Day Forecast due to not using individual trs and having all days be tds in a singular tr.

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
-.App {
+.App 
+{
   text-align: center;
 }
 
-.App-logo {
+.App-logo 
+{
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+@media (prefers-reduced-motion: no-preference) 
+{
+  .App-logo 
+  {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.App-header
+{
   background-color: #282c34;
   min-height: 90vh;
   display: flex;
@@ -24,15 +29,19 @@
   color: white;
 }
 
-.App-link {
+.App-link 
+{
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
+@keyframes App-logo-spin 
+{
+  from 
+  {
     transform: rotate(0deg);
   }
-  to {
+  to
+  {
     transform: rotate(360deg);
   }
 }
@@ -135,11 +144,31 @@ body
     color: #FFF;
 }
 
-#weatheroutput #weathericon {
-    height: 25vmin;
-    font-size: 20vmin;
+#weatherforecast 
+{
+    table-layout: fixed;
+    min-width: 100vw;
+    word-wrap: break-word;
 }
 
-#weatheroutput h1 {
+td
+{
+    max-width: 20%;
+    min-width: 20%;
+}
+
+#weatherforecast #weathericon 
+{
+    height: 15vmin;
+    font-size: 10vmin;
+}
+
+#weatherforecast h1 
+{
+    font-size: 3vmin;
+}
+
+#weatherforecast 
+{
     font-size: 3vmin;
 }
